srcs/tester/base/vector/rbegin_rend/log.txt
./base/vector/rbegin_rend/patched.cpp:7:2: error: use of undeclared identifier 'ft'
 ft::vector<int> myvector (5); // 5 default-constructed ints
 ^
./base/vector/rbegin_rend/patched.cpp:11:2: error: use of undeclared identifier 'ft'
 ft::vector<int>::reverse_iterator rit = myvector.rbegin();
 ^
./base/vector/rbegin_rend/patched.cpp:11:42: error: use of undeclared identifier 'myvector'
 ft::vector<int>::reverse_iterator rit = myvector.rbegin();
                                         ^
./base/vector/rbegin_rend/patched.cpp:12:15: error: use of undeclared identifier 'myvector'
 for (; rit!= myvector.rend(); ++rit)
              ^
./base/vector/rbegin_rend/patched.cpp:16:7: error: use of undeclared identifier 'ft'
 for (ft::vector<int>::iterator it = myvector.begin(); it != myvector.end(); ++it)
      ^
./base/vector/rbegin_rend/patched.cpp:16:38: error: use of undeclared identifier 'myvector'
 for (ft::vector<int>::iterator it = myvector.begin(); it != myvector.end(); ++it)
                                     ^
./base/vector/rbegin_rend/patched.cpp:16:62: error: use of undeclared identifier 'myvector'
 for (ft::vector<int>::iterator it = myvector.begin(); it != myvector.end(); ++it)
                                                             ^
7 errors generated.
